--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1142,7 +1142,7 @@ section {
 .contact .php-email-form textarea {
   padding: 10px 12px;
 }
-.contact .php-email-form button[type=submit] {
+.email button[type=submit] {
   background: #ffc451;
   border: 0;
   padding: 10px 24px;
