--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
+  background: rgba(0, 0, 0, 0.8);
 }
 #header.header-scrolled, #header.header-inner-pages {
   background: rgba(0, 0, 0, 0.8);
@@ -517,6 +518,33 @@ section {
   color: #ffc451;
 }
 .about .content p:last-child {
+  margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
+# Service-detail
+--------------------------------------------------------------*/
+.servicedetail .content h3 {
+  font-weight: 700;
+  font-size: 28px;
+  font-family: "Poppins", sans-serif;
+}
+.servicedetail .content ul {
+  list-style: none;
+  padding: 0;
+}
+.servicedetail .content ul li {
+  padding: 0 0 8px 26px;
+  position: relative;
+}
+.servicedetail .content ul i {
+  position: absolute;
+  font-size: 20px;
+  left: 0;
+  top: -3px;
+  color: #ffc451;
+}
+.servicedetail .content p:last-child {
   margin-bottom: 0;
 }
 
