--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,6 +452,14 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 20px;
     line-height: 24px;
   }
+  /* #hero .icon-box {
+    font-size: 20px;
+    line-height: 24px;
+    max-width: 50%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+  } */
 }
 
 /*--------------------------------------------------------------
@@ -665,9 +673,8 @@ section {
   margin-bottom: 0;
 }
 .services .icon-box:hover {
-  border-color: #fff;
-  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
-  transform: translateY(-10px);
+  border-color: #ffc451;
+  
 }
 
 /*--------------------------------------------------------------
